--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
-    <script src="script/script.js"></script>>
+    <script src="script/script.js"></script>
     <title>Venda de Produto</title>
 </head>
 
@@ -98,7 +98,7 @@
                 <img src="img4.webp" alt="Descrição da imagem">
             </div>
             <div class="prompt-info">
-                <h3>Exemplo de nome de Produto</h3>
+                <h3>Camiseta GG</h3>
                 <p>R$20,00</p>
             </div>
             <div class="prompt-description">
